<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip"
    android:visibility="visible"
    tools:visibility="visible">


    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="TESTEEEE"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nome"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="TESTEEEE"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descricao"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="TESTEEEE"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_mais"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/greenForest"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="11dp"
        android:text="@string/plus"
        android:textStyle="bold"
        android:textSize="25sp"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:id="@+id/qtd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="7dp"
        android:layout_toStartOf="@+id/btn_mais"
        android:gravity="center"
        android:text="@string/n_default"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_menos"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/red"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_marginEnd="7dp"
        android:layout_toStartOf="@+id/qtd"
        android:text="@string/minus"
        android:textSize="30sp"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:contextClickable="false"
        tools:src="@mipmap/ic_launcher_round" />
</RelativeLayout>
